--- a/index.html
+++ b/index.html
@@ -1,184 +1,166 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<title>Alexandre Pedroza - Desenvolvedor Web</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="Alexandre Pedroza">
-	<link rel="icon" href="img/icons/ap.png">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/style-responsive.css">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-	<span id="home"></span>
-	<nav class="navbar navbar-top navbar-default navbar-transparente"><!--BARRA DE NAVEGAÇÃO-->
-		<div class="container">
-			<div class="navbar-header">
-				<!--CONTEÚDO DA BARRA DE NAVEGAÇÃO-->
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#language-button">
-					<span class="sr-only">Alternar Navegação</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button><!--BOTÃO MOBILE-->
-				<a href="#" class="navbar-brand">
-					<!--LOGO-->
-					<span class="img-logo">Alexandre Pedroza</span>
-				</a>
-			</div><!--HEADER-->
-			<!--NAVBAR-->
-			<div class="collapse navbar-collapse" id="language-button">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href=""><img class="language lang-br" src="img/icons/br-icon.png" alt="pt-br"></a></li>
-					<li><a href="index-en.html"><img class="language lang-uk" src="img/icons/uk-icon.png" alt="en-gb" data-toggle="tooltip" data-placement="left" title="Inglês"></a></li>
-				</ul>
-			</div><!--BOTÃO IDIOMAS-->
-		</div><!--CONTAINER-->
-	</nav><!--NAV-->
-
-	<!--BANNER-->
-			<div class="banner parallax-window" data-parallax="scroll" data-image-src="img/wallpapers/banner-wallpaper.png">
-				<div class="banner-text">
-					<h1>Alexandre Pedroza</h1>
-					<h2>Desenvolvedor Web</h2>
-					<a href="#portfolio" class="btn-custom smooth-scroll">Portfólio</a>
-					<div class="scroll-down-button">
-						<a href="#intro" class="smooth-scroll"></a>
-					</div>
-				</div>
-			</div>
-
-	<!--INTRO-->
-		<div id="intro" class="intro container">
-			<h2>Você deseja ter seu próprio site?</h2>
-			<div class="intro-img">
-				<img class="img-responsive" src="img/icons/html-symbol.png" alt="html-symbol">
-			</div>
-			<p>Olá para todos! Sou um desenvolvedor web atuando localmente em João Pessoa (PB), Garanhuns (PE) e no mundo todo pela internet. Aqui você encontrará alguns dos meus trabalhos e formas para entrar em contato caso deseje tirar dúvidas, contratar algum serviço ou manutenção.
-				<br><br>
-			Eu não faço a utilização de Plataformas ou CMS para criar sites (como por exemplo Wordpress e Wix). Eles são bastante simples de usar, entretanto apresentam algumas desvantagens na flexibilidade dos layouts e em relação a segurança e privacidade. Portanto, trabalho com diversas linguagens de marcação e programação dentre as mais modernas no mercado, como HTML5, CSS3, Bootstrap 4, JavaScript e React.
-			</p>
-			<div class="scroll-down-button-intro">
-				<a href="#portfolio" class="smooth-scroll"></a>
-			</div>
-		</div><!--#INTRO-->
-
-	<!--PORTFOLIO-->
-	<div id="portfolio" class="portfolio parallax-window" data-parallax="scroll" data-image-src="img/wallpapers/portfolio-wallpaper.png">
-		<h2>Portfólio</h2>
-		<div class="portfolio-img">
-			<img class="img-responsive" src="img/icons/portfolio-icon.png" alt="portfolio-icon">
-		</div>
-		<p>Abaixo você pode ver os meus trabalhos. Para visualiza-los, basta clicar em qualquer um dos sites para abrir e navegar em tamanho real para uma experiência de cliente completa. Fique à vontade!
-		</p>
-		<!--SLIDESHOW-->
-		<div class="slide-container">
-			<input type="radio" id="i1" name="images" checked />
-			<input type="radio" id="i2" name="images" />
-			<div class="slide_img" id="one">
-				<a href="projects/holdriz/index.html" target="_blank"><img src="img/sites-portfolio/holdriz-site.png" alt="holdriz"></a>
-				<label class="prev" for="i2"><span>&#x2039;</span></label>
-				<label class="next" for="i2"><span>&#x203a;</span></label>
-			</div>
-			<div class="slide_img" id="two">
-				<a href="projects/ixalan-news/pt-br/index.html" target="_blank"><img src="img/sites-portfolio/ixalan-news-site.png" alt="ixalan-news"></a>
-				<label class="prev" for="i1"><span>&#x2039;</span></label>
-				<label class="next" for="i1"><span>&#x203a;</span></label>
-			</div>
-			<div id="nav_slide">
-				<label for="i1" class="dots" id="dot1"></label>
-				<label for="i2" class="dots" id="dot2"></label>
-			</div>
-		</div> <!--SLIDE CONTAINER-->
-			<div class="scroll-down-button-portfolio">
-				<a href="#contato" class="smooth-scroll"></a>
-			</div>
-	</div><!--PORTFOLIO-->
-
-	<!--CONTATO-->
-	<div id="contato" class="contato parallax-window" data-parallax="scroll" data-image-src="img/wallpapers/contato-wallpaper.png">
-		<div class="row">
-			<h2>Contato e Localização</h2>
-			<div class="col-xs-12 col-lg-6">
-				<div class="contato-img">
-					<img class="img-responsive" src="img/icons/gps.png" alt="gps">
-				</div>
-				<p>Caso precise entrar em contato comigo, basta me enviar um e-mail clicando no botão abaixo (alexandrepedrozamb@gmail.com).</p>
-				<a href="mailto:alexandrepedrozamb@gmail.com" class="btn-contato">Contato</a>
-			</div><!--COL-XS-MD-->
-			<div class="iframe">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.894623712554!2d-36.4875779846819!3d-8.889388693629325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7070ce4023f9c03%3A0xa82d6bb50de7410a!2sR.%20David%20Jorge%20Rodrigues%2C%20105%20-%20Heli%C3%B3polis%2C%20Garanhuns%20-%20PE%2C%2055296-170!5e0!3m2!1spt-BR!2sbr!4v1598466790765!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-			</div>
-			<div class="scroll-up-button">
-				<a href="#home" class="smooth-scroll"></a>
-			</div>
-		</div><!--ROW-->
-	</div><!--#CONTATO CONTAINER CONTATO -->
-
-	<!--FOOTER-->
-	<footer id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-md-6">
-					<h4>Alexandre Pedroza Desenvolvedor Web</h4>
-					<ul>
-						<li>David Jorge Rodrigues, 105, Heliópolis</li>
-						<li>Garanhuns, Brasil, 55296-172</li>
-						<li>Telefone: 87 99920-7001</li>
-						<li>E-mail: alexandrepedrozamb@gmail.com</li>
-					</ul>
-					<ul class="nav">
-						<li class="social-icons"><a href="mailto:alexandrepedrozamb@gmail.com"><img class="img-responsive" src="img/icons/email.png" alt="email"></a></li>
-						<li class="social-icons"><a href="https://www.instagram.com/alexpedrozawebdev/" target="_blank"><img class="img-responsive" src="img/icons/instagram.png" alt="instagram"></a></li>
-					</ul>
-				</div><!--COL-XS-12-->
-				<div class="col-xs-12 col-md-6 feedback">
-					<h4>Feedback</h4>
-					<p>Alguma crítica ou sugestão? Você pode me ajudar enviando um feedback!</p>
-					<a href="mailto:alexandrepedrozamb@gmail.com" class="btn btn-default btn-sm">Enviar</a>
-				</div><!--COL-XS-MD-->
-			</div><!--ROW-->
-		</div><!--CONTAINER-->
-	</footer><!--FOOTER-->
-
-	<!--SCRITPS-->
-	<!--jQuery (necessary for Bootstrap's JavaScript plugins)-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<!--Bootstrap-->
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<!--Parallax Effect: http://pixelcog.github.io/parallax.js/ -->
-	<script src="js/parallax.min.js"></script>
-	<!--EFEITO FADE NA PÁGINA-->
-	<script src="js/fade-effect-pages.js"></script>
-	<!--SMOOTH SCROLLING Obs: precisa por a classe "scroll" nos elementos que vão receber o script-->
-	<script>
-		jQuery(document).ready(function($) {
-			$(".smooth-scroll").click(function(event){
-				event.preventDefault();
-				$('html,body').animate({scrollTop:$(this.hash).offset().top}, 600);
-			});
-		});
-	</script>
-	<!--SLIDESHOW-->
-	<script>
-		onload  = start;
-		function start(){
-			var i = 1;
-			function Move(){
-		i = (i%3)+1; // 3 is the Number of image in slider
-		document.getElementById('i'+i).checked = true;
-	}
-		setInterval(Move,8000); //change img in 3 sec
-	}
-	</script>
-	<!--TOOLTIP-->
-	<script>
-		$(function () {
-			$('[data-toggle="tooltip"]').tooltip()
-		})
-	</script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="Alexandre Pedroza" />
+        <title>Alexandre Pedroza - Desenvolvedor Web</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- Third party plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Início</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Habilidades</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contato</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-10 align-self-end">
+                        <h1 class="text-uppercase text-white font-weight-bold">Alexandre Pedroza <br> Desenvolvedor Web</h1>
+                        <hr class="divider my-4" />
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 font-weight-light mb-5">Programador de interface de sites</p>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Descubra mais</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- About-->
+        <section class="page-section bg-primary" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Você deseja ter seu próprio website?</h2>
+                        <hr class="divider light my-4" />
+                        <p class="text-white-50 mb-4">Sou um desenvolvedor web atuando localmente em João Pessoa (PB), Garanhuns (PE) e no mundo todo pela internet. Trabalho com linguagens de marcação de texto e programação pura e não utilizo nenhuma plataforma ou CMS para criar sites (como por exemplo Wordpress e Wix). Eles são bastante simples de usar, entretanto apresentam algumas desvantagens na flexibilidade dos layouts e em relação a segurança e privacidade. Portanto, trabalho com diversas linguagens de marcação e programação dentre as mais modernas no mercado. Quer conhecer quais são minhas habilidades e essas linguagens que utilizo?</p>
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Vamos lá!</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Services-->
+        <section class="page-section" id="services">
+            <div class="container">
+                <h2 class="text-center mt-0">Habilidades e Skills</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">HTML5 e CSS3</h3>
+                            <p class="text-muted mb-0">Estas são as principais linguagens de marcação e estilização mais modernas existentes no mercado, a base de todo o meu trabalho</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-js text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">JavaScript</h3>
+                            <p class="text-muted mb-0">Não podendo ficar de fora, é a principal linguagem de desenvolvimento web da atualidade, e sem sombra de dúvidas minha linguagem de programação favorita</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-react text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">React</h3>
+                            <p class="text-muted mb-0">Uma biblioteca JavaScript que ajuda bastante na criação de sites e interfaces de usuário</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-plus text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">E mais</h3>
+                            <p class="text-muted mb-0">Utilizo também várias formas de criar páginas web, desde o Flexbox, CSS Grid, como também importantes frameworks, como Bootstrap4 e jQuery</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio-->
+        <div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="projects/ixalan-news/pt-br/index.html" target="_blank">
+                            <img class="img-fluid" src="assets/img/portfolio/ixalan-news.jpg" alt="Site Ixalan News" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="projects/startup/index.html" target="_blank">
+                            <img class="img-fluid" src="assets/img/portfolio/startup.jpg" alt="Site Startup" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="projects/holdriz/index.html" target="_blank">
+                            <img class="img-fluid" src="assets/img/portfolio/holdriz-pcs.jpg" alt="Site Holdriz PCs" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Call to action-->
+        <section class="page-section bg-dark text-white">
+            <div class="container text-center">
+                <h2 class="mb-4">Meus principais trabalhos até então, basta clicar para navegar!</h2>
+            </div>
+        </section>
+        <!-- Contact-->
+        <section class="page-section" id="contact">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="mt-0">Entre em contato</h2>
+                        <hr class="divider my-4" />
+                        <p class="text-muted mb-5">Caso precise entrar em contato comigo, basta ligar ou entrar em contato no WhatsApp para o número abaixo, ou apenas clicar no email. Estarei aguardando o seu contato ou feedback!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                        <i class="fab fa-whatsapp fa-3x mb-3 text-muted"></i>
+                        <div>+55 (87) 9 9920-7001</div>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center">
+                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                        <a class="d-block" href="mailto:alexandrepedrozamb@gmail.com">alexandrepedrozamb@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="bg-light py-5">
+            <div class="container"><div class="small text-center text-muted">Alexandre Pedroza © 2020 - Desenvolvedor Web</div></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
