--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Alexandre Pedroza" />
         <title>Alexandre Pedroza - Desenvolvedor Web</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -105,17 +105,17 @@
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="projects/ixalan-news/pt-br/index.html" target="_blank">
-                            <img class="img-fluid" src="assets/img/portfolio/ixalan-news.jpg" alt="Site Ixalan News" />
+                            <img class="img-fluid" src="img/portfolio/ixalan-news.jpg" alt="Site Ixalan News" />
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="projects/startup/index.html" target="_blank">
-                            <img class="img-fluid" src="assets/img/portfolio/startup.jpg" alt="Site Startup" />
+                            <img class="img-fluid" src="img/portfolio/startup.jpg" alt="Site Startup" />
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="projects/holdriz/index.html" target="_blank">
-                            <img class="img-fluid" src="assets/img/portfolio/holdriz-pcs.jpg" alt="Site Holdriz PCs" />
+                            <img class="img-fluid" src="img/portfolio/holdriz-pcs.jpg" alt="Site Holdriz PCs" />
                         </a>
                     </div>
                 </div>
